tests/rosetta/out/Zig/caesar-cipher-1.error
zig build: exit status 1
/tmp/caesar-cipher-1.zig:30:19: error: expected 3 argument(s), found 2
/tmp/zig-0.12.0/lib/std/mem.zig:3148:5: note: function declared here
/tmp/caesar-cipher-1.zig:82:9: error: variable of type 'comptime_int' must be const or comptime
/tmp/caesar-cipher-1.zig:82:9: note: to modify this variable at runtime, it must be given an explicit fixed-size number type
